use Boolean.valueOf(..) not new Boolean(..) for boxing